# ros-class-node

./: CMakeLists.txt  README.md  package.xml
cfg/: RateChangingNode.cfg
config/: params.yaml
include/ros-class-node/: node_class.h  node_class.hpp
launch/: start.launch
src/: data_sender.cpp  main.cpp  node_class.cpp  rate_changing_node.cpp
test/: CMakeLists.txt  node_class_utest.cpp  start.test
