<?xml version="1.0"?>
<package format="2">
  <name>ros-class-node</name>
  <version>1.0.0</version>
  <description>The ros-class-node package</description>

  <maintainer email="jianle001@e.ntu.edu.sg">brucechanjianle</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/BruceChanJianLe/ros-class-node</url>

  <author email="jianle001@e.ntu.edu.sg">brucechanjianle</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
